--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -61,6 +61,7 @@
 <article>
 <p> Un marco teórico es el apartado en el que se exponen los antecedentes, las principales teorías y conceptos que sustentan un proyecto o investigación. Puede incluir también los argumentos e ideas que se han desarrollado en relación con un tema.</p> 
 </article>
+	 <img src="imagenes/marcoteorico.png" alt="Logo 2024" class="marcoteorico">
 </details>     
 <details>
 <summary> proyecto</summary>
