--- a/glosario_pensamiento_algoritmico.html
+++ b/glosario_pensamiento_algoritmico.html
@@ -59,6 +59,7 @@
 <article>
 <p>Es algo que no sigue una pauta definida ejemplo en un experimiento aleatorio si hay mas de un resultade posible y no podemos decir con anteriorded lo que va a suceder, en este caso depende del azar,no sigue una pauta definida.</p> 
 </article>
+	<img src="imagenes/Aleatorio.png" alt="Logo 2024" class="imagenespensamiento">
 </details>
 
 <details>
@@ -66,6 +67,7 @@
 <article>
 <p> Secuencia de pasos para solucionar un problema.</p> 
 </article>
+	<img src="imagenes/Algoritmo.png" alt="Logo 2024" class="imagenespensamiento">
 </details>     
    
 <details>
@@ -73,6 +75,7 @@
 <article>
 <p> Instrucciones que se entregan en el lenguaje propio de la persona para resoluer un algoritmo.</p> 
 </article>
+	<img src="imagenes/Seudocodigo.png" alt="Logo 2024" class="imagenespensamiento">
 </details>           
        
 <details>
@@ -80,6 +83,7 @@
 <article>
 <p>Consiste en dividir la informacion en grupos mas pequeños, como numeros palabras o frases para facilitar su aprendizaje Conjunto de estrategias que ayudan a retener ideas complejas de manera sencilla.</p> 
 </article>
+	<img src="imagenes/Nemotecnica.png" alt="Logo 2024" class="imagenespensamiento">
 </details>        
 
 <details>
@@ -87,6 +91,7 @@
 <article>
 <p>Serie de eventos, procesas o procedimientos que ocurren en un orden determinad uno tras otro.</p> 
 </article>
+	<img src="imagenes/Secuencial.png" alt="Logo 2024" class="imagenespensamiento">
 </details>           
        
 <details>
@@ -94,6 +99,7 @@
 <article>
 <p>Son estructuras que permiten elegir entre la ejecucion de una accion u otra.</p> 
 </article>
+	<img src="imagenes/Condicional.png" alt="Logo 2024" class="imagenespensamiento">
 </details>           
 
 <details>
@@ -101,6 +107,7 @@
 <article>
 <p> Representa un contenedor o un espacio en la memoria fisica o virtual de una computadora, donde se almacenan distintos tipos de datos (valores) durante la ejecucion de un programa.</p> 
 </article>
+	<img src="imagenes/Variable.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -108,6 +115,7 @@
 <article>
 <p>Procedimiento de asociación mental para facilitar el recuerdo de algo. Por ejemplo, en lugar de intentar recordar el número 47895328463 de una sola vez, puedes fragmentarlo en grupos como 4789/532/8463, lo que lo hace más manejable y fácil de recordar.</p> 
 </article>
+	<img src="imagenes/mnemotecnia.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -115,6 +123,7 @@
 <article>
 <p>Un servidor, es un ordenador conectado a Internet que tiene comofuncionesprincipales almacenar páginas web generalmente escritas en HTML (HyperText Transfer Protocol), administrar bases de datos y responder a las solicitudes de los navegadores de los internautas.</p> 
 </article>
+	<img src="imagenes/servidor.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 	
 <details>
@@ -122,6 +131,7 @@
 <article>
 <p>Aparato que convierte las señales digitales en analógicas y viceversa, y que permite la comunicación entre dos computadoras a través de una línea telefónica o de un cable.</p> 
 </article>
+	<img src="imagenes/módem.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -129,6 +139,7 @@
 <article>
 <p>Una red de área local (LAN) es una red contenida dentro de una pequeña zona geográfica, normalmente dentro del mismo edificio. Las redes WiFi domésticas y las redes de pequeñas empresas son algunos ejemplos comunes de LAN.</p> 
 </article>
+	<img src="imagenes/Red lan.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -136,6 +147,7 @@
 <article>
 <p> digital describe el uso dominante de las tecnologías informáticas más recientes para mejorar los procesos organizativos, potenciar las interacciones entre personas, organizaciones y cosas y posibilitar nuevos modelos de negocio, entre otros aspectos.</p> 
 </article>
+	<img src="imagenes/digital.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -143,6 +155,7 @@
 <article>
 <p>El hosting web es un servicio que proporciona almacenamiento para los archivos que componen su sitio web y el software, el hardware físico y la infraestructura de red que hace que su sitio web esté disponible para otros en Internet.</p> 
 </article>
+	<img src="imagenes/hosting.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -150,6 +163,7 @@
 <article>
 <p>Un router es un dispositivo que proporciona Wi-Fi y que generalmente está conectado a un módem. Envía información desde Internet a los dispositivos personales, como computadoras, teléfonos o tablets. Los dispositivos conectados a Internet de tu casa conforman la red de área local (LAN).</p> 
 </article>
+	<img src="imagenes/router.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -157,6 +171,7 @@
 <article>
 <p>Que presenta información, especialmente una medida, mediante una magnitud física continua proporcional al valor de dicha información.</p> 
 </article>
+	<img src="imagenes/analógico.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -164,6 +179,7 @@
 <article>
 <p>Un diagrama de flujo o flujograma es una representación gráfica y secuencial de un proceso o flujo de trabajo con todas las tareas y actividades principales necesarias para lograr un objetivo común.</p> 
 </article>
+	<img src="imagenes/diagrama de flujo.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -171,6 +187,7 @@
 <article>
 <p>es aquella en la que una instrucción o acción sigue a otra en secuencia. En este tipo de programación se presentan operaciones de inicio a fin, inicialización de variables, operaciones de asignación, cálculo, sumarización, entre otras.</p> 
 </article>
+	<img src="imagenes/estructuras secuenciales.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 <details>
@@ -178,6 +195,7 @@
 <article>
 <p>permite decidir por cuál alternativa seguirá el flujo del programa dependiendo del resultado de la evaluación de una condición. Para establecer condiciones complejas se utilizan los operadores relacionales y lógicos.</p> 
 </article>
+	<img src="imagenes/estructuras condicionales.png" alt="Logo 2024" class="imagenespensamiento">
 </details> 
 
 	
