--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
  <li><a href="index.html">Inicio</a></li> 
  <li><a href="glosario_fundamentos_ingenieria.html">Glosario Ingeniería</a></li> 
  <li><a href="glosario_pensamiento_sistemico.html">Glosario TGS</a></li> 
- <li><a href="glosario_pensamiento_algoritmico.html">Glosario Algoritmos</a></li> 
+ <li><a href="glosario_pensamiento_algoritmico.html">Glosario Algoritmos</a></li>
+ <li><a href="glosario_fundamentos_ingenieria.html">Glosario Ingeniería</a></li> 
 </ul>
 </nav>
 <main>
