--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -47,6 +47,9 @@
             <li class="nav-item">
               <a class="nav-link" href="glosario_pensamiento_algoritmico.html">Glosario Pensamiento Algoritmo</a>
             </li>
+		    <li class="nav-item">
+              <a class="nav-link" href="proyecto.html">Glosario Pensamiento Sistemico</a>
+            </li>
           </ul>
         </div>
       </div>
