--- a/glosario_pensamiento_algoritmico.html
+++ b/glosario_pensamiento_algoritmico.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="glosario_pensamiento_sistemico.html">Glosario Pensamiento Sistemico</a>
             </li>
 		    <li class="nav-item">
-              <a class="nav-link" href="proyecto.html">Glosario Pensamiento Sistemico</a>
+              <a class="nav-link" href="proyecto.html">Proyecto</a>
             </li>
           </ul>
         </div>
