--- a/proyecto.html
+++ b/proyecto.html
@@ -84,40 +84,40 @@
     <a class="nav-link" id="nav-Justificación" data-bs-toggle="tab" href="#Justificación">Justificación</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Situaciónproblémica">Situación problémica</a>
+    <a class="nav-link" id="nav-Situaciónproblémica" data-bs-toggle="tab" href="#Situaciónproblémica">Situación problémica</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#AnálisisdeSituaciónactual1">Análisis de Situación actual</a>
+    <a class="nav-link" id="nav-AnálisisdeSituaciónactual1" data-bs-toggle="tab" href="#AnálisisdeSituaciónactual1">Análisis de Situación actual</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Estudiosprevios">Estudios previos</a>
+    <a class="nav-link" id="nav-Estudiosprevios" data-bs-toggle="tab" href="#Estudiosprevios">Estudios previos</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Análisisdecasos">Análisis de casos</a>
+    <a class="nav-link" id="nav-Análisisdecasos" data-bs-toggle="tab" href="#Análisisdecasos">Análisis de casos</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Instrumentosparainvestigaciónylevantamientodeinformación">Instrumentos para investigación y levantamiento de información</a>
+    <a class="nav-link" id="nav-Instrumentosparainvestigaciónylevantamientodeinformación" data-bs-toggle="tab" href="#Instrumentosparainvestigaciónylevantamientodeinformación">Instrumentos para investigación y levantamiento de información</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#MarcoTeóricoConceptual">Marco Teórico Conceptual</a>
+    <a class="nav-link" id="nav-MarcoTeóricoConceptual" data-bs-toggle="tab" href="#MarcoTeóricoConceptual">Marco Teórico Conceptual</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#AnálisisdeSituaciónactual2">Análisis de Situación actual</a>
+    <a class="nav-link" id="nav-AnálisisdeSituaciónactual2" data-bs-toggle="tab" href="#AnálisisdeSituaciónactual2">Análisis de Situación actual</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Entornoactual">Entorno actual</a>
+    <a class="nav-link" id="nav-Entornoactual" data-bs-toggle="tab" href="#Entornoactual">Entorno actual</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#EjemplosactualesenColombiayelmundo">Ejemplos actuales en Colombia y el mundo</a>
+    <a class="nav-link" id="nav-EjemplosactualesenColombiayelmundo" data-bs-toggle="tab" href="#EjemplosactualesenColombiayelmundo">Ejemplos actuales en Colombia y el mundo</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Quecostosopreciostienenproductossimilares">Que costos o precios tienen productos similares</a>
+    <a class="nav-link" id="nav-Quecostosopreciostienenproductossimilares" data-bs-toggle="tab" href="#Quecostosopreciostienenproductossimilares">Que costos o precios tienen productos similares</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Quédisciplinasocienciasseinvolucranenelproyecto">Qué disciplinas o ciencias se involucran en el proyecto</a>
+    <a class="nav-link" id="nav-Quédisciplinasocienciasseinvolucranenelproyecto" data-bs-toggle="tab" href="#Quédisciplinasocienciasseinvolucranenelproyecto">Qué disciplinas o ciencias se involucran en el proyecto</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#Propuesta">Propuesta</a>
+    <a class="nav-link" id="nav-Propuesta" data-bs-toggle="tab" href="#Propuesta">Propuesta</a>
   </li>
 </ul>
 
