--- a/proyecto.html
+++ b/proyecto.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+  <meta charset="utf-8">
   <meta name="author" content="Leiner Riaño">
   <meta name="description" content="Pagina WEB de mi glosario personal, correspondiente a la asignatura de ingeniería Mecatronica, UCundinamarca">
 
@@ -125,6 +125,8 @@
 <br>
 <div class="tab-content">
 <div class="tab-pane fade" id="Objetivos" role="tabpanel" aria-labelledby="nav-Objetivos">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Objetivos</h2>
   <p class="Parrafo1">Proveer a las personas del campo innovación y tecnología, como un recurso accesible que les permita mejorar sus cultivos, incrementar la calidad de la producción y optimizar los tiempos de cosecha.</p>
   <ul class="Parrafo1">
@@ -132,14 +134,22 @@
       <li>Generar empleo en el sector de la agricultura, industrializando el sector campesino.</li>
       <li>Generar conciencia a la sociedad en general, sobre el uso responsable del agua, proporcionando una solución óptima y efectiva.</li>
   </ul>
+  </div>
+</div>
 </div>
 <div class="tab-pane fade" id="Justificación" role="tabpanel" aria-labelledby="nav-Justificación">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Justificación</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Desarrollar un sistema integral de gestión de agua que combine el monitoreo del consumo de agua, control de nivel de agua en tanques o cisternas, tecnologías de información y comunicación (TIC), inteligencia artificial (IA) y energías renovables para optimizar el uso del agua en la agricultura y promover la sostenibilidad, contribuye en la producción agrícola y a la mitigación del derroche de agua.</p>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Situaciónproblémica" role="tabpanel" aria-labelledby="nav-Situaciónproblémica">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Situación problémica</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -148,7 +158,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="AnálisisdeSituaciónactual1" role="tabpanel" aria-labelledby="nav-AnálisisdeSituaciónactual">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Análisis de Situación actual</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -158,7 +172,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Estudiosprevios" role="tabpanel" aria-labelledby="nav-Estudiosprevios">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Estudios previos</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -168,7 +186,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Análisisdecasos" role="tabpanel" aria-labelledby="nav-Análisisdecasos">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Análisis de casos</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -178,7 +200,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Instrumentosparainvestigaciónylevantamientodeinformación" role="tabpanel" aria-labelledby="nav-Instrumentosparainvestigaciónylevantamientodeinformación">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Instrumentos para investigación y levantamiento de información:</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -234,7 +260,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="MarcoTeóricoConceptual" role="tabpanel" aria-labelledby="nav-MarcoTeóricoConceptual">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Marco Teórico Conceptual</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Normativa actual que rige en el tema de investigación</p>
@@ -247,7 +277,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="AnálisisdeSituaciónactual2" role="tabpanel" aria-labelledby="nav-AnálisisdeSituaciónactual">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Análisis de Situación actual</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -268,7 +302,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Entornoactual" role="tabpanel" aria-labelledby="nav-Entornoactual">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Entorno actual</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -282,7 +320,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="EjemplosactualesenColombiayelmundo" role="tabpanel" aria-labelledby="nav-EjemplosactualesenColombiayelmundo">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Ejemplos actuales en Colombia y el mundo</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -298,7 +340,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Quecostosopreciostienenproductossimilares" role="tabpanel" aria-labelledby="nav-Quecostosopreciostienenproductossimilares">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Que costos o precios tienen productos similares</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -317,7 +363,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Quédisciplinasocienciasseinvolucranenelproyecto" role="tabpanel" aria-labelledby="nav-Quédisciplinasocienciasseinvolucranenelproyecto">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Qué disciplinas o ciencias se involucran en el proyecto</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -347,7 +397,11 @@
             </ul>
             </article>
 </div>
+</div>
+</div>
 <div class="tab-pane fade" id="Propuesta" role="tabpanel" aria-labelledby="nav-Propuesta">
+  <div class="card" >
+    <div class="card-body">
   <h2 class="Titulo1">Propuesta</h2>
             <article class="SubCapituloTema">
             <p class="Parrafo1">Descripción de la problemática</p>
@@ -376,6 +430,8 @@
                 Componente: Fuentes de energía solar, baterías y conexión a la red eléctrica para asegurar el funcionamiento continuo.</li>
             </ul>
             </article>
+</div>
+</div>
 </div>
 <br>
 </div>
