--- a/pagina2.html
+++ b/pagina2.html
@@ -53,7 +53,7 @@
 
 <header style="background-image: url(alerta.png);">
   
- <img src="perro.jpg" alt="perrito" class="perrito"> 
+ <img src="imagenes/perro.jpg" alt="perrito" class="perrito"> 
 
    
 </header>
