--- a/pagina2.html
+++ b/pagina2.html
@@ -51,7 +51,7 @@
 <h1><div class="dis">DISCULPENOS</div></h1>
   <h2><div class="disculpenos">Este sitio WEB esta en construccion</div></h2>
 
-<header style="background-image: url(alerta.png);">
+<header style="background-image: url(imagenes/alerta.png);">
   
  <img src="imagenes/perro.jpg" alt="perrito" class="perrito"> 
 
