--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
 <footer>
 <div class="footer-text">
+  <a href="formulario.html">
+    <button class="btn btn-primary" type="submit">Coctatanos</button>
+  </a>
 <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
 </div>
 
