--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -64,56 +64,56 @@
 <article>
 <p> Un marco teórico es el apartado en el que se exponen los antecedentes, las principales teorías y conceptos que sustentan un proyecto o investigación. Puede incluir también los argumentos e ideas que se han desarrollado en relación con un tema.</p> 
 </article>
-	 <img src="imagenes/marcoteorico.png" alt="Logo 2024" class="marcoteorico">
+	 <img src="imagenes/marcoteorico.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 <details>
 <summary> proyecto</summary>
 <article>
 <p>proyecto es el plan que se establece para transformar una realidad, consumiendo un conjunto de recursos ya existentes, con el fin de crear una fuente de la que se deriva una corriente de bienes y/o servicios.</p> 
 </article>
-	<img src="imagenes/proyecto.png" alt="Logo 2024" class="proyecto">
+	<img src="imagenes/proyecto.png" alt="Logo 2024" class="imagenessistemico">
 </details>  
 <details>
 <summary> diseño </summary>
 <article>
 <p> es el proceso de planificación de los objetivos, la estructura, las tareas y los productos de un proyecto y de decidir la definición de lo que se considera finalizado. </p> 
 </article>
-	<img src="imagenes/diseño.png" alt="Logo 2024" class="diseño">
+	<img src="imagenes/diseño.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 <details>
 <summary> Planeacion </summary>
 <article>
 <p> proceso de preparar un conjunto de decisiones para la acción futura, dirigida al logro de objetivos por medio preferibles. Es un proceso, una actividad continua que no termina con la formulación de un plan sino que implica reajuste permanente entre medio y fines. </p> 
 </article>
-	<img src="imagenes/Planeacion.png" alt="Logo 2024" class="Planeacion">
+	<img src="imagenes/Planeacion.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 <details>
 <summary> diagrama de Gantt </summary>
 <article>
 <p> Un diagrama de Gantt es una herramienta de gestión de proyectos que sirve para visualizar los componentes básicos de un proyecto y para organizarlo en tareas más pequeñas y gestionables. </p> 
 </article>
-	<img src="imagenes/diagrama de Gantt.png" alt="Logo 2024" class="diagrama de Gantt">
+	<img src="imagenes/diagrama de Gantt.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 <details>
 <summary> análisis </summary>
 <article>
 <p> El análisis de proyectos es el proceso de evaluación de un proyecto para determinar su viabilidad, limitaciones y riesgos potenciales. </p> 
 </article>
-	<img src="imagenes/análisis.png" alt="Logo 2024" class="análisis">
+	<img src="imagenes/análisis.png" alt="Logo 2024" class="imagenessistemico">
 </details>   
 <details>
 <summary> estructura </summary>
 <article>
 <p> La estructura de un proyecto puede hacer referencia al orden que ayuda a organizar los equipos que lo forman o considerarse como la que tiene que ver con el plan mismo de la iniciativa. </p> 
 </article>
-	<img src="imagenes/estructura.png" alt="Logo 2024" class="estructura">
+	<img src="imagenes/estructura.png" alt="Logo 2024" class="imagenessistemico">
 </details>  
 <details>
 <summary> adaptabilidad </summary>
 <article>
 <p> es la capacidad de un sistema para ajustar su estructura, comportamiento o función en respuesta a cambios en su contexto u objetivos. La medición de la adaptabilidad es importante para evaluar el rendimiento, la resiliencia y la sostenibilidad de los proyectos de ingeniería. </p> 
 </article>
-	<img src="imagenes/adaptabilidad.png" alt="Logo 2024" class="adaptabilidad">
+	<img src="imagenes/adaptabilidad.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 	
 </section>    
