--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -74,7 +74,7 @@ Ejemplo
 Una empresa de sistema abierto. Recibe materias primas, recursos humanos y financieros del entorno, y luego produce bienes o servicios que entrega de vuelta al mercado.
 </p> 
 </article>
-	<img src="imagenes/sistemaabierto.jpeg" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/Sistemaabierto.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>             
        
 <details>
@@ -83,7 +83,7 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <p>es aquel que no interactúa con su entorno, es decir, no intercambia materia, energía o información con el exterior. Estos sistemas son autónomos y no reciben entradas o recursos del exterior, ni producen salidas o productos que afecten al entorno.
 </p> 
 </article>
-	<img src="imagenes/sistemacerrado.jpeng" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/Sistemacerrado.jpeng" alt="Logo 2024" class="imagenessistemico">
 </details>        
      
 <details>
@@ -91,7 +91,7 @@ Una empresa de sistema abierto. Recibe materias primas, recursos humanos y finan
 <article>
 <p>es un conjunto de elementos que interactúan entre si y con su entorno, siguiendo leyes y principios físicos, químicos y biológicos, sin intervención humana. Estos sistemas pueden ser complejos y dinámicos.</p> 
 </article>
-	<img src="imagenes/Sistemanatural.jpeg" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/Sistema natural.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>           
   
 <details>
