--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -207,16 +207,9 @@ Ejemplo
 Cuando la temperatura corporal aumenta debido al calor externo, el cuerpo activa mecanismos como la sudoración para enfriarse. 
 </p> 
 </article>
+	<img src="imagenes/homeostasis.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details> 
-		
-</article>
-</details>
-<br>.</p> 
-</article>
-	
-</details>
-</br>     
-</section>    
+		  
 <hr>
 </main>
 
