--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -115,6 +115,71 @@
 </article>
 	<img src="imagenes/adaptabilidad.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
+<details>
+<summary> Innovación </summary>
+<article>
+<p> Proceso de crear o mejorar productos, servicios o procesos para resolver problemas de manera más eficiente, económica o sostenible. </p> 
+</article>
+	<img src="imagenes/ing1.jpg" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Escalabilidad </summary>
+<article>
+<p>Capacidad de un sistema o proceso para adaptarse o expandirse de manera eficiente para manejar una mayor carga o demanda.</p> 
+</article>
+	<img src="imagenes/ing2.png" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Cálculo </summary>
+<article>
+<p> Rama de las matemáticas que trata del cambio y la variación. En ingeniería se utiliza para analizar el comportamiento de sistemas físicos y resolver problemas técnicos.</p> 
+</article>
+	<img src="imagenes/ing3.png" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Optimización </summary>
+<article>
+<p> Proceso de mejorar un sistema o diseño para obtener el mejor rendimiento posible bajo ciertas restricciones, ya sea minimizando costos, tiempo, materiales, o maximizando eficiencia o productividad. </p> 
+</article>
+	<img src="imagenes/ing4.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Proyecto</summary>
+<article>
+<p> Trabajo o tarea de ingeniería planificada, que implica la creación o mejora de un producto o sistema, con un conjunto de objetivos, restricciones y recursos definidos. </p> 
+</article>
+	<img src="imagenes/ing5.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Planificación </summary>
+<article>
+<p>Proceso de establecer metas, recursos y cronogramas necesarios para la ejecución de un proyecto de ingeniería. La planificación efectiva es esencial para el éxito del proyecto. </p> 
+</article>
+	<img src="imagenes/ing6.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Calidad </summary>
+<article>
+<p> Conjunto de características de un producto o servicio que cumplen con los requisitos establecidos, garantizando su funcionamiento y durabilidad. El control de calidad es una parte fundamental de la ingeniería. </p> 
+</article>
+	<img src="imagenes/ing7.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>   
+	<details>
+<summary> Mantenimiento </summary>
+<article>
+<p> Conjunto de acciones necesarias para mantener en condiciones de funcionamiento adecuadas a los equipos, máquinas o instalaciones, con el objetivo de prolongar su vida útil y eficiencia.
+ </p> 
+</article>
+	<img src="imagenes/ing8.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>
+	<details>
+<summary> Tecnología </summary>
+<article>
+<p> Conjunto de conocimientos, habilidades, herramientas y técnicas que los ingenieros utilizan para resolver problemas y crear productos y servicios innovadores.
+ </p> 
+</article>
+	<img src="imagenes/ing10.jpeg" alt="Logo 2024" class="imagenessistemico">
+</details>   
 	
 </section>    
 <hr>
