--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <footer>
 <div class="footer-text">
   <a href="formulario.html">
-    <button class="btn-primary" type="submit">Coctatanos</button>
+    <button class="btn-primary" type="submit">Contactanos</button>
   </a>
 <p>&copy; Universidad Cundinamarca  | Todos los derechos reservados | 2024 </p>
 </div>
