--- a/glosario_pensamiento_sistemico.html
+++ b/glosario_pensamiento_sistemico.html
@@ -207,7 +207,7 @@ Ejemplo
 Cuando la temperatura corporal aumenta debido al calor externo, el cuerpo activa mecanismos como la sudoración para enfriarse. 
 </p> 
 </article>
-	<img src="imagenes/homeostasis.jpeg" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/homeostasis.png" alt="Logo 2024" class="imagenessistemico">
 </details> 
 		  
 <hr>
