--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -92,7 +92,7 @@
 <article>
 <p> Un diagrama de Gantt es una herramienta de gestión de proyectos que sirve para visualizar los componentes básicos de un proyecto y para organizarlo en tareas más pequeñas y gestionables. </p> 
 </article>
-	<img src="imagenes/diagrama de Gantt.png" alt="Logo 2024" class="imagenessistemico">
+	<img src="imagenes/diagramadeGantt.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
 <details>
 <summary> análisis </summary>
