--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -63,6 +63,9 @@
 <summary> marco teórico </summary>
 <article>
 <p> Un marco teórico es el apartado en el que se exponen los antecedentes, las principales teorías y conceptos que sustentan un proyecto o investigación. Puede incluir también los argumentos e ideas que se han desarrollado en relación con un tema.</p> 
+<br>
+<p> Ejemplo: El marco teórico de la teoría de la relatividad general de Einstein se basa en la geometría no euclidiana y el principio de equivalencia entre gravedad y aceleración.</p>
+
 </article>
 	 <img src="imagenes/marcoteorico.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
