--- a/glosario_fundamentos_ingenieria.html
+++ b/glosario_fundamentos_ingenieria.html
@@ -73,6 +73,9 @@
 <summary> proyecto</summary>
 <article>
 <p>proyecto es el plan que se establece para transformar una realidad, consumiendo un conjunto de recursos ya existentes, con el fin de crear una fuente de la que se deriva una corriente de bienes y/o servicios.</p> 
+<br>
+<p> Ejemplo: Un proyecto de investigación en biología molecular podría tener como objetivo clonar un gen específico para estudiar su función en una determinada enfermedad.</p>
+
 </article>
 	<img src="imagenes/proyecto.png" alt="Logo 2024" class="imagenessistemico">
 </details>  
@@ -80,6 +83,9 @@
 <summary> diseño </summary>
 <article>
 <p> es el proceso de planificación de los objetivos, la estructura, las tareas y los productos de un proyecto y de decidir la definición de lo que se considera finalizado. </p> 
+<br>
+<p> Ejemplo: El diseño experimental de un estudio clínico debe ser riguroso para garantizar la validez de los resultados y minimizar el sesgo.</p>
+
 </article>
 	<img src="imagenes/diseño.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
@@ -87,6 +93,9 @@
 <summary> Planeacion </summary>
 <article>
 <p> proceso de preparar un conjunto de decisiones para la acción futura, dirigida al logro de objetivos por medio preferibles. Es un proceso, una actividad continua que no termina con la formulación de un plan sino que implica reajuste permanente entre medio y fines. </p> 
+<br>
+<p> Ejemplo: La planeación estratégica de una empresa implica definir la visión a largo plazo, establecer objetivos claros y desarrollar estrategias para alcanzarlos.</p>
+
 </article>
 	<img src="imagenes/Planeacion.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
@@ -94,6 +103,10 @@
 <summary> diagrama de Gantt </summary>
 <article>
 <p> Un diagrama de Gantt es una herramienta de gestión de proyectos que sirve para visualizar los componentes básicos de un proyecto y para organizarlo en tareas más pequeñas y gestionables. </p> 
+<br>
+<p> Ejemplo: Un diagrama de Gantt es una herramienta esencial para la gestión de proyectos, permitiendo visualizar la secuencia de tareas, las dependencias entre ellas y los plazos de entrega.
+</p>
+
 </article>
 	<img src="imagenes/diagramadeGantt.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
@@ -101,6 +114,8 @@
 <summary> análisis </summary>
 <article>
 <p> El análisis de proyectos es el proceso de evaluación de un proyecto para determinar su viabilidad, limitaciones y riesgos potenciales. </p> 
+<br>
+<p> Ejemplo: El análisis de datos cualitativos obtenidos en una entrevista puede revelar patrones y temas emergentes que informan la comprensión de un fenómeno social.</p>
 </article>
 	<img src="imagenes/análisis.png" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -108,6 +123,8 @@
 <summary> estructura </summary>
 <article>
 <p> La estructura de un proyecto puede hacer referencia al orden que ayuda a organizar los equipos que lo forman o considerarse como la que tiene que ver con el plan mismo de la iniciativa. </p> 
+<br>
+<p> Ejemplo:La estructura atómica de un elemento determina sus propiedades químicas y físicas.</p>
 </article>
 	<img src="imagenes/estructura.png" alt="Logo 2024" class="imagenessistemico">
 </details>  
@@ -115,6 +132,8 @@
 <summary> adaptabilidad </summary>
 <article>
 <p> es la capacidad de un sistema para ajustar su estructura, comportamiento o función en respuesta a cambios en su contexto u objetivos. La medición de la adaptabilidad es importante para evaluar el rendimiento, la resiliencia y la sostenibilidad de los proyectos de ingeniería. </p> 
+<br>
+<p> Ejemplo: Ser capaz de responder rápidamente a los cambios, como cuando hay nuevos gerentes o compañeros de trabajo.</p>
 </article>
 	<img src="imagenes/adaptabilidad.png" alt="Logo 2024" class="imagenessistemico">
 </details>     
@@ -122,6 +141,8 @@
 <summary> Innovación </summary>
 <article>
 <p> Proceso de crear o mejorar productos, servicios o procesos para resolver problemas de manera más eficiente, económica o sostenible. </p> 
+<br>
+<p> Ejemplo: La aparición de nuevos dispositivos electrónicos, técnicas médicas avanzadas, sistemas de producción o técnicas agrícolas.</p>
 </article>
 	<img src="imagenes/ing1.jpg" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -129,6 +150,8 @@
 <summary> Escalabilidad </summary>
 <article>
 <p>Capacidad de un sistema o proceso para adaptarse o expandirse de manera eficiente para manejar una mayor carga o demanda.</p> 
+<br>
+<p> Ejemplo: La escalabilidad de un algoritmo determina su capacidad para manejar grandes conjuntos de datos y crecer en complejidad.</p>
 </article>
 	<img src="imagenes/ing2.png" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -136,6 +159,8 @@
 <summary> Cálculo </summary>
 <article>
 <p> Rama de las matemáticas que trata del cambio y la variación. En ingeniería se utiliza para analizar el comportamiento de sistemas físicos y resolver problemas técnicos.</p> 
+<br>
+<p> Ejemplo: El cálculo diferencial es una rama de las matemáticas que estudia las tasas de cambio de las funciones.</p>
 </article>
 	<img src="imagenes/ing3.png" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -143,6 +168,8 @@
 <summary> Optimización </summary>
 <article>
 <p> Proceso de mejorar un sistema o diseño para obtener el mejor rendimiento posible bajo ciertas restricciones, ya sea minimizando costos, tiempo, materiales, o maximizando eficiencia o productividad. </p> 
+<br>
+<p> Ejemplo: La optimización de un proceso industrial puede reducir costos y aumentar la eficiencia.</p>
 </article>
 	<img src="imagenes/ing4.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -150,6 +177,8 @@
 <summary> Proyecto</summary>
 <article>
 <p> Trabajo o tarea de ingeniería planificada, que implica la creación o mejora de un producto o sistema, con un conjunto de objetivos, restricciones y recursos definidos. </p> 
+<br>
+<p> Ejemplo: Un proyecto de investigación en biología molecular podría tener como objetivo clonar un gen específico para estudiar su función en una determinada enfermedad.</p>
 </article>
 	<img src="imagenes/ing5.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -157,6 +186,8 @@
 <summary> Planificación </summary>
 <article>
 <p>Proceso de establecer metas, recursos y cronogramas necesarios para la ejecución de un proyecto de ingeniería. La planificación efectiva es esencial para el éxito del proyecto. </p> 
+<br>
+<p> Ejemplo:  La planeación estratégica de una empresa implica definir la visión a largo plazo, establecer objetivos claros y desarrollar estrategias para alcanzarlos.</p>
 </article>
 	<img src="imagenes/ing6.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>   
@@ -164,22 +195,26 @@
 <summary> Calidad </summary>
 <article>
 <p> Conjunto de características de un producto o servicio que cumplen con los requisitos establecidos, garantizando su funcionamiento y durabilidad. El control de calidad es una parte fundamental de la ingeniería. </p> 
+<br>
+<p> Ejemplo:  Son metas específicas y medibles que se alinean con la visión de la empresa y las expectativas de los clientes. Por ejemplo, reducir la tasa de defectos en un producto o aumentar la satisfacción del cliente.</p>
 </article>
 	<img src="imagenes/ing7.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>   
 	<details>
 <summary> Mantenimiento </summary>
 <article>
-<p> Conjunto de acciones necesarias para mantener en condiciones de funcionamiento adecuadas a los equipos, máquinas o instalaciones, con el objetivo de prolongar su vida útil y eficiencia.
- </p> 
+<p> Conjunto de acciones necesarias para mantener en condiciones de funcionamiento adecuadas a los equipos, máquinas o instalaciones, con el objetivo de prolongar su vida útil y eficiencia.</p> 
+<br>
+<p> Ejemplo:  Consiste en realizar tareas para evitar el mal funcionamiento de los equipos y los tiempos de inactividad.</p>
 </article>
 	<img src="imagenes/ing8.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>
 	<details>
 <summary> Tecnología </summary>
 <article>
-<p> Conjunto de conocimientos, habilidades, herramientas y técnicas que los ingenieros utilizan para resolver problemas y crear productos y servicios innovadores.
- </p> 
+<p> Conjunto de conocimientos, habilidades, herramientas y técnicas que los ingenieros utilizan para resolver problemas y crear productos y servicios innovadores.</p> 
+<br>
+<p> Ejemplo:  Nuevos dispositivos electrónicos, técnicas médicas avanzadas, nuevos sistemas de producción, nuevas técnicas agrícolas, entre otros.</p>
 </article>
 	<img src="imagenes/ing10.jpeg" alt="Logo 2024" class="imagenessistemico">
 </details>   
